test/negative/201_if_branches_differ.err
201_if_branches_differ.fx:2:27: error: if() expression should have the same type as its branches

1 errors occured during type checking.
